--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "wdio": "wdio run ./wdio.conf.js"
+    "wdio": "wdio run ./wdio.conf.js",
+    "allure-report": "allure generate reports/allure-results/ --clean && allure open"
   },
   "author": "alvin",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "@babel/register": "^7.23.7",
+    "@wdio/allure-reporter": "^8.29.3",
     "@wdio/cucumber-framework": "^8.29.3",
     "@wdio/local-runner": "^8.29.7",
     "@wdio/spec-reporter": "^8.29.7"
